--- a/app/src/main/res/layout/activity_ref_detail.xml
+++ b/app/src/main/res/layout/activity_ref_detail.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="54dp" />
+        app:layout_constraintGuide_begin="10dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineStart"
@@ -125,7 +125,7 @@
             android:textColor="#373737"
             android:textSize="18sp"/>
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/btn_usedall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
