--- a/app/src/main/res/layout/activity_refrigerator.xml
+++ b/app/src/main/res/layout/activity_refrigerator.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="54dp" />
+        app:layout_constraintGuide_begin="10dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineStart"
@@ -49,7 +49,7 @@
         app:layout_constraintGuide_begin="107dp" />
     <ScrollView
         android:layout_width="350dp"
-        android:layout_height="568dp"
+        android:layout_height="560dp"
         android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
         app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
@@ -58,7 +58,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
