--- a/app/src/main/res/layout/activity_cat_search_result.xml
+++ b/app/src/main/res/layout/activity_cat_search_result.xml
@@ -49,7 +49,7 @@
         android:layout_marginTop="70dp"
         android:background="@drawable/edge"
         android:ems="10"
-        android:text="Searchwords"
+        android:text="Search"
         android:padding="10dp"
         android:textColor="@color/black"
         android:textSize="16sp"
