--- a/app/src/main/res/layout/activity_dogs_recipe.xml
+++ b/app/src/main/res/layout/activity_dogs_recipe.xml
@@ -40,10 +40,13 @@
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="@id/guidelineStart"
         app:layout_constraintTop_toTopOf="@id/guidelineTop" />
+
     <TextView
         android:id="@+id/txt_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="8dp"
         android:text="소고기와 양배추"
         android:textColor="@color/black"
         android:textSize="24sp"
@@ -51,6 +54,7 @@
         app:layout_constraintTop_toBottomOf="@id/txt_dogs" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="350dp"
         android:layout_height="586dp"
         app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
@@ -61,7 +65,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/img_main"
@@ -70,19 +74,22 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
                 tools:srcCompat="@color/black" />
+
             <TextView
                 android:id="@+id/txt_tip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginVertical="5dp"
                 android:text="3일 냉장보관 가능"
                 android:textColor="@color/black"
-                android:layout_gravity="center"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -95,21 +102,24 @@
                         android:scaleType="centerInside"
 
                         app:srcCompat="@mipmap/ic_launcher" />
+
                     <TextView
                         android:id="@+id/txt_mat1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="다진 소고기"
                         android:layout_gravity="center"
-                        android:textColor="@color/black"/>
+                        android:text="다진 소고기"
+                        android:textColor="@color/black" />
+
                     <TextView
                         android:id="@+id/txt_unit1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="200g"
                         android:layout_gravity="center"
-                        android:textColor="@color/black"/>
+                        android:text="200g"
+                        android:textColor="@color/black" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -122,54 +132,62 @@
                         android:scaleType="centerInside"
 
                         app:srcCompat="@mipmap/ic_launcher" />
+
                     <TextView
                         android:id="@+id/txt_mat2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="양배추"
                         android:layout_gravity="center"
-                        android:textColor="@color/black"/>
+                        android:text="양배추"
+                        android:textColor="@color/black" />
+
                     <TextView
                         android:id="@+id/txt_unit2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="50g"
                         android:layout_gravity="center"
-                        android:textColor="@color/black"/>
+                        android:text="50g"
+                        android:textColor="@color/black" />
                 </LinearLayout>
 
             </LinearLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="조리 순서"
                 android:textColor="@color/black"
-                android:textSize="24sp"
-                android:layout_marginTop="8dp"/>
+                android:textSize="24sp" />
+
             <LinearLayout
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
+
                     <TextView
                         android:id="@+id/txt_stepNum1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
                         android:text="1"
-                        android:textSize="18sp"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
+
                     <TextView
                         android:id="@+id/txt_step1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
                         android:text="양배추를 잘게 다집니다."
-                        android:textSize="18sp"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
                 </LinearLayout>
+
                 <ImageView
                     android:id="@+id/img_step1"
                     android:layout_width="300dp"
@@ -177,30 +195,35 @@
                     android:layout_gravity="center"
                     tools:srcCompat="@color/black" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
+
                     <TextView
                         android:id="@+id/txt_stepNum2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
                         android:text="2"
-                        android:textSize="18sp"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
+
                     <TextView
                         android:id="@+id/txt_step2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
                         android:text="소고기를 냄비 중불(350'F)에 부으세요."
-                        android:textSize="18sp"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
                 </LinearLayout>
+
                 <ImageView
                     android:id="@+id/img_step2"
                     android:layout_width="300dp"
@@ -208,15 +231,29 @@
                     android:layout_gravity="center"
                     tools:srcCompat="@color/black" />
             </LinearLayout>
+
             <Button
                 android:id="@+id/btn_complete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/black"
                 android:layout_gravity="center"
+                android:backgroundTint="@color/black"
                 android:onClick="onButton1Clicked"
-                android:text="조리 완료"
-                />
+                android:text="조리 완료" />
+
         </LinearLayout>
     </ScrollView>
+
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.097"
+        app:srcCompat="@drawable/baseline_favorite_border_black_24dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
